# beefree-clients

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
.github/workflows/: run-tests.yml
beefree_clients/: clients.py  exceptions.py  models.py
config/settings/: base.py  test.py
docker/: Dockerfile  docker-compose-test.yml
scripts/: docker-tests.sh
tests/: base.py  conftest.py  test_bee_html_transformer_client.py  test_bee_parser_client.py  test_catalog_client.py  test_ehawk_client.py  test_notification_center_client.py  test_partnerstack_client.py  test_proxy_client.py  test_tdv_client.py  test_topyline_client.py  test_zapier_client.py  utils.py
tests/data/: message.json
tests/data/cassettes/: test_bee_proxy_client_check_css_font_false.json  test_bee_proxy_client_check_css_font_true.json  test_bee_proxy_client_decode_id_ok.json  test_bee_proxy_client_encode_id_ok.json  test_bee_proxy_client_message_path_empty_if_proxy_error.json  test_bee_proxy_client_message_path_ok copy.json  test_bee_proxy_client_parse_css_font_bad_url.json  test_bee_proxy_client_parse_css_font_ok.json  test_catalog_client_get_plans_ok.json  test_check_score.json  test_email_domain_always_good.json  test_get_last_24h_alerts.json  test_get_new_alerts.json  test_parser__email__response_ok.yaml  test_parser__http_error.yaml  test_parser__page__response_ok.yaml  test_revet_score.json  test_tdv_get_seat_history_ok.json  test_toplyne_send_multiple_event_ko.json  test_toplyne_send_multiple_events.json  test_toplyne_send_single_event.json
