[tool.poetry]
name = "beefree-clients"
version = "0.1.0"
description = ""
authors = ["Bee Dev <dev@beefree.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
twilio = "^8.9.1"
types-requests = "^2.31.0.10"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pyupgrade = "^3.15.0"

[tool.black]
target-version = ['py310']
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
