[tool.poetry]
name = "beefree-clients"
version = "0.1.0"
description = ""
authors = ["Bee Dev <dev@beefree.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
django = "^4.2.4"
djangorestframework = "^3.12.2"
requests = "^2.31.0"
twilio = "^8.3.0"
vcrpy = "^5.0.0"
pytest = "^7.2.1"



[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pyupgrade = "^3.15.0"
types-requests = "^2.28.11.12"
pytest-django = "^4.5.2"
pytest-env = "^1.0.1"

[tool.black]
target-version = ['py310']
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
