[tool.poetry]
name = "beefree-clients"
version = "0.1.0"
description = ""
authors = ["Bee Dev <dev@beefree.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.31.0"
vcrpy = "^5.0.0"
pytest = "^7.2.1"



[tool.poetry.group.dev.dependencies]
tox = "^4.4.5"
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pyupgrade = "^3.15.0"
types-requests = "^2.28.11.12"
pytest-env = "^1.0.1"
pytest-reverse = "^1.5.0"
pytest-xdist = "^3.2.0"
pytest-cov = "^4.0.0"
pytest-html = "^3.2.0"

[tool.black]
target-version = ['py310']
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
